# python-t8-client

./: .gitignore  LICENSE  README.md  compare_waves.py  pyproject.toml
.github/workflows/: python-checks.yml
src/t8_client/: decode_array.py  main.py  models.py  t8.py  utils.py
t8_client/: models.py  t8.py  utils.py
tests/: test_t8.py  test_utils.py
tools/: t8_cli.py
