[project]
name = "t8-client"
version = "0.1.0"
description = "T8 API Client"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["click>=8.1.8", "numpy>=2.2.3", "requests>=2.32.3"]

[project.scripts]
t8-client = "t8_client.main:cli"

[dependency-groups]
dev = ["pytest>=8.3.5", "ruff>=0.10.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]
ignore = []
